k8s/keycloak/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
  namespace: talentlink-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: keycloak-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: talentlink-local
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak-postgres
